# amoca-climate-insurance-solana-anchor-program

./: Anchor.toml  README.md  demo.js  package-lock.json  package.json
programs/amoca-climate-insurance/: Cargo.toml
programs/amoca-climate-insurance/src/: example_usage.rs  lib.rs
tests/: amoca-climate-insurance.ts  switchboard-oracle-integration.ts
