[package]
name = "amoca-climate-insurance"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amoca_climate_insurance"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = {version = "0.31.1", features = ["token"] }
spl-associated-token-account = "7.0.0"
switchboard-on-demand = { version = "0.9.0", features = ["devnet", "pinocchio"] }
bytemuck = "1.23.2"
pinocchio = { version = "0.9.2", features = ["std"] }
bs58 = "0.5.1"
